# jetank_perception

./: .gitignore  CMakeLists.txt  package.xml
config/: stereo_camera_config.yaml  stereo_camera_params.yaml
config/calibration/: left_camera.yaml  ost.txt  right_camera.yaml  stereo_calibration.yaml
docs/: imx219_83_optimal_settings.md  minimum_range_calculation.md  quality_diagnostics_guide.md
include/jetank_perception/: camera_interface.hpp  jetson_csi_camera.hpp  quality_monitor.hpp  quality_monitoring.hpp  stereo_processing_strategy.hpp
launch/: simple_camera.launch.py  single_camera.launch.py  stereo_camera.launch.py
scripts/: check_quality.sh
src/: camera_factory.cpp  camera_interface.cpp  point_cloud_filter.cpp  quality_monitor.cpp  single_camera.cpp  stereo_camera_node.cpp  stereo_processing_factory.cpp  stereo_processing_strategy.cpp
