<?xml version="1.0"?>
<package format="3">
  <name>jetank_perception</name>
  <version>1.0.0</version>
  <description>Perception function for Jetank</description>
  <maintainer email="gorkom.projects@gmail.com">Koen</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>camera_info_manager</depend>
  <depend>pcl_conversions</depend>
  <depend>libopencv-dev</depend>
  <depend>libpcl-dev</depend>
  <depend>libgstreamer1.0-dev</depend>
  <depend>libgstreamer-plugins-base1.0-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>