<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jetank_perception</name>
  <version>1.0.0</version>
  <description>Perception functions for Jetank</description>
  <maintainer email="gorkom.projects@gmail.com">Koen</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>

  <depend>pcl_conversions</depend>

  <depend>libopencv-dev</depend>
  <depend>libpcl-dev</depend>
  <depend>libpcl-all-dev</depend>
  <depend>libgstreamer1.0-dev</depend>
  <depend>libgstreamer-plugins-base1.0-dev</depend>

  <!-- Runtime dependencies for launch files -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch_xml</exec_depend>
  <exec_depend>launch_yaml</exec_depend>

  <exec_depend>tf2_ros</exec_depend>
  <!-- <depend>yaml-cpp-vendor</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>